# requiem-mods

./: .dockerignore  .gitignore  Dockerfile  README.md  checks.sh  config.example.yaml  config.yaml  docker-compose.yaml  pyproject.toml  run.sh
src/: _types.py  bot.py  config.py  main.py  utils.py
src/cogs/commands/: mod_ticket.py  partner.py  purge.py  verify.py
src/cogs/events/: connect.py  disconnect.py  member_join.py  ready.py  resumed.py
src/ui/: embeds.py  modals.py  views.py
